<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aqilix.mobile.aqilix.ProfileActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/profilePicture"
            android:contentDescription="@string/profile_desc"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/editFirstName"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/first_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/editLastName"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/last_name"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editDob"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:hint="@string/dob"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0sp"
                android:minHeight="0sp"
                android:id="@+id/btnPickDob"
                android:text="@string/pick_date"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/editAddress"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:hint="@string/address"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editCity"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/city"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/province"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editProvince"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/province"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPostal"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/postal_code"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editCountry"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:inputType="text"
            android:hint="@string/country"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editUser"
            android:layout_marginBottom="15dp"
            android:textSize="18sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSaveProfile"
            android:text="@string/save"/>
    </LinearLayout>
</ScrollView>
