<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aqilix.mobile.aqilix.SignupActivity">

    <RelativeLayout
        android:id="@+id/activity_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textHeader"
            android:gravity="center"
            android:textSize="30sp"
            android:textAllCaps="true"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textPage"
            android:gravity="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:layout_marginBottom="50dp"
            android:layout_below="@id/textHeader"
            android:text="@string/login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textEmail"
            android:textSize="20sp"
            android:layout_below="@id/textPage"
            android:gravity="center"
            android:text="@string/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:gravity="center"
            android:hint="@string/sample_email"
            android:layout_below="@id/textEmail"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/textPassword"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_below="@id/editTextEmail"
            android:text="@string/password"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPassword"
            android:gravity="center"
            android:hint="@string/sample_password"
            android:layout_below="@id/textPassword"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_below="@id/editTextPassword"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/havent_account"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signUpText"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/signup"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
