<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aqilix.mobile.aqilix.SignupActivity">

    <RelativeLayout
        android:id="@+id/activity_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textHeader"
            android:gravity="center">
            <ImageView
                android:contentDescription="@string/logo_description"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:src="@drawable/aqilix_bright_256_80" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textEmail"
            android:textStyle="bold"
            android:textSize="24sp"
            android:fontFamily="sans-serif"
            android:layout_below="@id/textHeader"
            android:gravity="center"
            android:text="@string/email"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextEmail"
            android:gravity="center"
            android:textSize="22sp"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/sample_email"
            android:layout_below="@id/textEmail"
            android:inputType="textEmailAddress"
            android:nextFocusUp="@id/editTextEmail"
            android:nextFocusLeft="@id/editTextEmail"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/btnReset"
            android:text="@string/reset"
            android:textSize="22sp"
            android:fontFamily="sans-serif"
            android:layout_below="@id/editTextEmail"
            android:gravity="center"/>
    </RelativeLayout>
</ScrollView>
